fixed floaty layout bug

--- a/src/App/components/About/about.css
+++ b/src/App/components/About/about.css
@@ -1,6 +1,6 @@
 .about {
   /* border: 2px solid red; */
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
