--- a/src/App/components/Certifications/certifications.css
+++ b/src/App/components/Certifications/certifications.css
@@ -1,6 +1,6 @@
 .certifications {
   /* border: 2px solid red; */
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
