--- a/src/App/components/Hero/hero.css
+++ b/src/App/components/Hero/hero.css
@@ -1,6 +1,6 @@
 .hero {
   /* border: 2px solid red; */
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
