--- a/src/App/components/Projects/projects.css
+++ b/src/App/components/Projects/projects.css
@@ -1,6 +1,6 @@
 .projects {
   /* border: 2px solid red; */
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
